# Cisco_CDP_Network_Audit

./: .gitignore  Home_CDP_Network_Audit.xlsx  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run.bat
ProgramFiles/config_files/: config.py  config_loader.py  logging.conf
cdp_audit/: __about__.py  __init__.py  app_config.py  cli.py  credentials.py  discovery.py  excel_reporter.py  logging_setup.py  validators.py
portable_env/: pyvenv.cfg
portable_env/Scripts/: activate  activate.bat
portable_env/myapp/: main.py
portable_env/myapp/ProgramFiles/config_files/: config.py
