[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp-network-audit"
version = "0.1.0"
description = "Threaded CDP discovery and Excel reporting tool"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Christopher Davies T/A Nautomation Prime" }
]
keywords = ["cdp", "network", "audit", "cisco", "netmiko"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "textfsm==1.1.3",
  "pandas==2.2.1",
  "openpyxl==3.1.2",
  "PyYAML>=6.0",
  "paramiko>=2.12.0",
  "netmiko>=4.2.0",
  "pywin32>=305; sys_platform == 'win32'"
]

[project.scripts]
cdp-audit = "cdp_audit:main"
